<resources>
    <string name="app_name">ColorSync</string>
    <string name="profile_picture_ContentDescription">profile picture</string>
    <string name="image_ContentDescription">uploaded image</string>
    <string name="username_default_text">username</string>
    <string name="description_default_text">description</string>
    <string name="homeButtonDescription">Home</string>
    <string name="showCommentsDescription">Show comments</string>
    <string name="commentsText">comments</string>
    <string name="AddPostDescriptionHint">What\'s on your mind?</string>
    <string name="profileButtonDescription">Profile</string>
    <string name="drawButtonDescription">Draw</string>
    <string name="emailHint">email</string>
    <string name="passwordHint">password</string>
    <string name="registerText">register</string>
    <string name="loginText">login</string>
    <string name="usernameHint">username</string>
    <string name="profile_pictureDescription">profile picture</string>
    <string name="send_buttonDescription">Send button</string>
    <string name="post_previewCD">Selected image</string>
    <string name="cancel_buttonCD">Cancel button</string>
    <string name="post_addCD">Add uploaded image</string>
    <string name="post_uploadCD">Upload new image</string>
    <string name="likeButtonCD">like button</string>
    <string name="createCommentHint">Write a comment</string>
    <string name="tagHint">tag</string>
    <string name="remove_tagCD">remove tag</string>
    <string name="uploadImageCD">Upload image</string>
    <string name="uploadText">Upload a image</string>
    <string name="publicText">Public</string>
    <string name="uploadButtonText">Upload</string>
    <string name="noImagesText">No images here 😞</string>
    <string name="no_imagesCD">No images</string>
    <string name="changePfpText">Change profile picture</string>
    <string name="changeText">Change</string>
    <string name="addButtonDescription">Create post</string>
    <string name="logoutCD">logout button</string>
    <string name="settingsCD">settings button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilePictureText">Profile Picture:</string>
    <string name="usernameText">Username:</string>
    <string name="descriptionText">Description:</string>
    <string name="back_buttonCD">back button</string>
    <string name="undoCD">undo button</string>
    <string name="emailText">Email:</string>
    <string name="fullscreen_imageCD">fullscreen image</string>
    <string name="options_buttonCD">options button</string>
    <string name="make_publicText">Make public</string>
    <string name="make_privateText">Make private</string>
    <string name="deleteText">Delete</string>
</resources>