<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:contentPadding="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="@null">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/profile_picture_ContentDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_default_text"
                app:layout_constraintStart_toEndOf="@+id/profile_picture"
                app:layout_constraintTop_toTopOf="@+id/profile_picture"
                app:layout_constraintBottom_toBottomOf="@id/profile_picture"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/createComment"
                app:layout_constraintTop_toBottomOf="@+id/profile_picture"
                android:paddingTop="10dp"
                android:textColor="@color/text"
                android:hint="@string/createCommentHint"
                android:textColorHint="@color/text"
                android:autofillHints="text"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:scrollbars="vertical"
                android:layout_marginEnd="10dp"/>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/createComment"
                app:layout_constraintTop_toTopOf="@id/description"
                app:layout_constraintBottom_toBottomOf="@id/description"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/send"
                app:tint="@color/text"
                android:stateListAnimator="@animator/click_grow"
                android:scaleType="fitCenter"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/send_buttonDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>